<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guide.GuideFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_title"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            />

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/guide_sec_1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_2_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <Button
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/colorButtonBg"
            android:text="@string/button_download"
            android:textSize="20sp" />

        <Button
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/colorButtonBg"
            android:text="@string/button_downloading"
            android:textSize="20sp" />

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_3_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <Button
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/colorButtonBg"
            android:text="@string/button_install"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/guide_sec_3" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_4_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/guide_sec_4" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_5_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/guide_sec_5_1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_5_text_1"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/guide_sec_5_2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_sec_5_text_2"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/guide_sec_5_3" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>